[tool.poetry]
name = "healthcheck_api"
version = "1.0.0"
description = "MIT OL infrastructure health checks"
authors = ["Chris Patti <feoh@feoh.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-testinfra = {version = "^10.0.0", extras = ["docker"]}
fastapi = {version = "^0.109.0", extras = ["all"]}
dagster = "^1.9.9"
dagster-graphql = "^1.9.9"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.345"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
